--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ requests = "*"
 bs4 = "*"
 ipython = "*"
 ipdb = "*"
+flake8 = "*"
+isort = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.7"
